<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="layout_tv_last">Last</string>
    <string name="layout_tv_next">Next</string>
    <string name="layout_tv_replace">Replace</string>
    <string name="layout_tv_replaceAll">Replace All</string>
    <string name="text_to_search">Text to search</string>
    <string name="replacement">Replacement</string>
    <string name="cursor_actions">Cursor Actions</string>
    <string name="go_to_end">Go To End</string>
    <string name="move_up">Move Up</string>
    <string name="move_down">Move Down</string>
    <string name="move_left">Move Left</string>
    <string name="move_right">Move Right</string>
    <string name="home">Home</string>
    <string name="end">End</string>
    <string name="switch_color_scheme">Switch Color Scheme</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="search_text">Search Text</string>
    <string name="switch_language">Switch Language</string>
    <string name="format">Format</string>
    <string name="color_scheme">Color Scheme</string>
    <string name="wordwrap">Wordwrap</string>
    <string name="line_number_visibility">Show line number</string>
    <string name="pin_line_number">Pin LineNumber</string>
    <string name="magnifier">Magnifier</string>
    <string name="use_icu_library">Use ICU library</string>
    <string name="settings">Settings</string>
    <string name="smaple_code">Sample code</string>
    <string name="name">Name</string>
    <string name="copy">Copy</string>
    <string name="show_toast">Показать уведомление</string>
    <string name="log_message">Регистрация сообщения</string>
    <string name="dump_value">Извлечь значение</string>
    <string name="print_stacktrace">Вывод трасировки стека</string>
    <string name="template">Template</string>
    <string name="pallete">Палитра</string>
    <string name="color_converter">Конвертер цветов</string>
    <string name="other">Other</string>
    <string name="message_save_file">Do you want to save this file?</string>
    <string name="save">Save</string>
    <string name="decimal">Decimal (base 10)</string>
    <string name="hex">Hex (base 16)</string>
    <string name="dec2hex">Dec to Hex</string>
    <string name="close">Close</string>
    <string name="clear">Clear</string>
    <string name="copied_to_clipboard">\"Copied to clipboard \"</string>
    <string name="title_code_editor">Editor</string>
    <string name="use_regex">Use regex</string>
    <string name="ignore_case">Ignore case</string>
    <string name="menu">Menu</string>
</resources>
