<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:subtitleCentered="true"
            app:subtitleTextAppearance="@style/TextAppearance.MaterialComponents.Body2"
            app:titleTextAppearance="@style/AppTheme.ToolbarStyle"
            tools:menu="@menu/menu_editor"
            tools:title="ApkEditor Pro" />

    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorSurfaceVariant"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/toolbar_filename"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1.0"
            android:paddingBottom="2dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            tools:text="FileName" />

        <TextView
            android:id="@+id/position_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:textSize="13sp"
            tools:text="1:0" />
    </LinearLayout>

    <io.github.rosemoe.sora.widget.CodeEditor
        android:id="@+id/editor"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <com.mcal.editor.view.SymbolInputView
            android:id="@+id/symbol_input"
            android:layout_width="match_parent"
            android:layout_height="36dp" />

    </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/search_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <EditText
            android:id="@+id/search_editor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/text_to_search" />

        <EditText
            android:id="@+id/replace_editor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/replacement" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="5dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonGotoLast"
                    android:text="@string/layout_tv_last"
                    android:drawableTop="@drawable/skip_previous"
                    style="@style/ButtonBarStyle"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonGotoNext"
                    android:text="@string/layout_tv_next"
                    android:drawableTop="@drawable/skip_next"
                    style="@style/ButtonBarStyle"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonReplace"
                    android:text="@string/layout_tv_replace"
                    android:drawableTop="@drawable/find_replace"
                    style="@style/ButtonBarStyle"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonReplaceAll"
                    android:text="@string/layout_tv_replaceAll"
                    android:drawableTop="@drawable/replace_all"
                    style="@style/ButtonBarStyle"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/menu"
                    android:text="Menu"
                    android:drawableTop="@drawable/ic_additional_menu"
                    style="@style/ButtonBarStyle"/>

            </LinearLayout>

        </HorizontalScrollView>

    </LinearLayout>

</LinearLayout>